# ingest

./: .gitignore  Cargo.toml  run.sh
script/: check  fixup  urls
src/: dft.rs  main.rs
