[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
nlp = "0.1.1"
once_cell = "1.19.0"
rusqlite = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
regex = "1.10.3"
